set cors Content-Type